fix(#39): some MUI Components not changing in Dark Mode

--- a/styles/main.less
+++ b/styles/main.less
@@ -174,6 +174,16 @@ input {
   color: var(--mode-text-color);
 }
 
+span.MuiSwitch-track {
+  background: var(--mode-text-color);
+}
+
+div.MuiPaper-root.MuiMenu-paper {
+  background: var(--input-background-color);
+  color: var(--mode-text-color);
+}
+
+
 .main-grid {
   display: flex;
   height: 100vh;
